# dotvibe

./: .env.example  .env.test  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEMO-INSTRUCTIONS.md  LICENSE  README.md  REFACTORING.md  code.ts  debug-embeddings.ts  deno.json  mastra.md  prd.md  start-surreal.sh  tests.md  vibe
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude.yml
data/: README.md
embed/: Cargo.toml  EmbedAnySurrealThing.ts  README.md  main.rs  test-perfect.ts
installer/: README.md  TaskFile.md  Taskfile.yml  coverage.html  coverage.out  go.mod  installer_test.go  main.go  modules.go
scripts/: build-all-platforms.sh  mock-google.ts
src/: cli.ts  database.ts  debug-runner.ts  embeddings.ts  file-scanner.ts  index.ts  indexing-orchestrator.ts  ingest.ts  path-ingest.ts  process-manager.ts  query.ts  surreal-server.ts  tool-registry.ts  toolbox.ts  workspace.ts
src/agent/: EMBEDDING.md  README.md  ast-discovery.ts  ast_graph.md  conversation.ts  indexing.ts  llm.ts  models.ts  progress.ts  tools.ts  types.ts  windowing.ts
src/commands/: index.ts  init.ts  start.ts
src/infra/: README.md  SURREAL.md  ast.ts  config.ts  data_specs.md  embeddings.ts  errors.ts  logger.ts  storage.ts
src/shims/: zod-compat.ts
tests/: cli-integration.test.ts  cli.test.ts  database.test.ts  embeddings.test.ts  file-scanner.test.ts  google-ai-integration.test.ts  index.test.ts  indexing-e2e.test.ts  ingest.test.ts  init.test.ts  parallel-indexing.test.ts  path-ingest.test.ts  query.test.ts
(+21 files in other folders)
