[package]
name = "embed_any_surreal_thing"
version = "0.2.0"
edition = "2021"
description = "Ultra-minimal FFI for semantic search: just embed() and query()"
license = "MIT"

[lib]
name = "embed_any_surreal_thing"
path = "main.rs"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies only - let EmbedAnything handle its own business
embed_anything = "0.6.4"
surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
dirs = "5.0"

# FFI essentials - std is included by default

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true